# game-of-life

./: .gitignore  CMakeLists.txt  conanfile.py  conanfile.txt
cmake/: CMakeHelpers.cmake
desktop/: CMakeLists.txt
desktop/qt/: helper.cpp
dynamics/: CMakeLists.txt
dynamics/examples/: CMakeLists.txt  main.cpp  main_surface.cpp
dynamics/src/: actuator.h  actuator.hpp  common.h  dumper.hpp  force.hpp  mass.h  mass.hpp  spring.hpp  surface.h  system.hpp
dynamics/tests/: CMakeLists.txt  main.cpp  test_vector.cpp
engine/: CMakeLists.txt
engine/examples/: CMakeLists.txt  main.cpp
engine/examples/qt/: mainwindow.h  widget.cpp
engine/src/: grid.h
engine/src/board/: cell.hpp
engine/src/grid/: base_grid.hpp  continuous_grid.hpp  flat_grid.hpp
engine/tests/: CMakeLists.txt  main.cpp  test_1.cpp
game-of-life/examples/: CMakeLists.txt  main.cpp
game-of-life/examples/qt/: CMakeLists.txt  glwidget.cpp  glwidget.h  helper.h  main.cpp  mainwindow.cpp  widget.cpp  widget.h
game-of-life/src/: board.hpp  cell.hpp  grid.h  rules.h  utils_tuple.hpp
game-of-life/src/board/: basic.hpp  cell.hpp  common.hpp  typed.hpp
game-of-life/src/grid/: base_grid.hpp  flat_grid.hpp
game-of-life/src/rules/: conway.hpp  cornway.hpp  frozen.hpp
